--- a/filters/stage/pptx/README
+++ b/filters/stage/pptx/README
@@ -1,4 +1,4 @@
-This is the MS Office PowerPoint 12+ import/export filter for KPresenter
+This is the MS Office PowerPoint 12+ import/export filter for Calligra
 
 <temporary>
 A. Important styles inserted by hand into styles.xml, within:
